# lunchbox

./: .cruft.json  .devcontainer.json  .env  .gitattributes  .gitignore  LICENSE  README.md  lunchbox.code-workspace
docker/: build.yaml  conform.yml  dev.dockerfile  dev_requirements.txt  docker-compose.yml  frozen_requirements.txt  generate_pyproject.py  lunchbox.dockerfile  mypy.ini  pdm.toml  prod.dockerfile  prod_requirements.txt  pyproject.toml  rolling_pin.py  rolling_pin_command.py  test_python_deps.py  tox.ini  x-tools.sh  zshrc
docker/config/: build.yaml  pdm.toml.j2  prod.toml  pyproject.toml  pyproject.toml.j2  tox.ini  zshrc
docker/config/jupyter/: jupyter_lab_config.py
docker/dev/: .pdm.toml  pdm.toml  pyproject.toml
docker/jupyter/: jupyter_lab_config.py  jupyter_notebook_config.py
docker/pdm/: generate_pyproject.py  pdm.toml  pyproject.toml
docker/prod/: pyproject.toml
docker/scripts/: generate_pyproject.py  prod-cli  s_tools.sh  toml_gen.py  x-tools.sh  x_tools.sh
docs/: .buildinfo  all_metrics.html  cli.html  cyclomatic_complexity_metrics.html  genindex.html  halstead_metrics.html  index.html  intro.html  lunchbox.html  maintainability_metrics.html  modules.html  objects.inv  py-modindex.html  raw_metrics.html  readme.html  search.html  searchindex.js
docs/.doctrees/: cli.doctree  environment.pickle  index.doctree  intro.doctree  lunchbox.doctree  modules.doctree  readme.doctree
docs/_modules/: cli.html  index.html  logging.html
docs/_modules/lunchbox/: enforce.html  singleton.html  stopwatch.html  theme.html  tools.html
docs/_sources/: index.rst.txt  intro.rst.txt  lunchbox.rst.txt
docs/_static/: style.css
docs/htmlcov/: class_index.html  d_23f94f3c6ce8e7f9_enforce_py.html  d_23f94f3c6ce8e7f9_singleton_py.html  d_23f94f3c6ce8e7f9_stopwatch_py.html  d_23f94f3c6ce8e7f9_tools_py.html  d_57615f7fb9a7056a_command_py.html  d_57615f7fb9a7056a_enforce_py.html  d_57615f7fb9a7056a_singleton_py.html  d_57615f7fb9a7056a_stopwatch_py.html  d_57615f7fb9a7056a_tools_py.html  function_index.html  index.html  lunchbox_enforce_py.html  lunchbox_stopwatch_py.html  lunchbox_tools_py.html  python_lunchbox_enforce_py.html  python_lunchbox_stopwatch_py.html  python_lunchbox_tools_py.html  status.json  z_23f94f3c6ce8e7f9_enforce_py.html  z_23f94f3c6ce8e7f9_singleton_py.html  z_23f94f3c6ce8e7f9_stopwatch_py.html  z_23f94f3c6ce8e7f9_theme_py.html  z_23f94f3c6ce8e7f9_tools_py.html
notebooks/: build.ipynb  dev.ipynb
pip/: setup.py  tox.ini
python/: cli.py
python/lunchbox/: __init__.py  command.py  enforce.py  enforce_test.py  singleton.py  singleton_test.py  stopwatch.py  stopwatch_test.py  theme.py  theme_test.py  tools.py  tools_test.py
sphinx/: conf.py  index.rst  intro.rst  lunchbox.rst  modules.rst  style.css
