[project]
name = "lunchbox"
version = "0.2.6"
description = "A library of various tools for common python tasks"
authors = [
    {name = "Alex Braun", email = "alexander.g.braun@gmail.com"}
]
dependencies = [
    "humanfriendly",
    "wrapt",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    # "flake8",
    # "flake8-polyfill",
    # "ipykernel",
    # "ipysheet",
    # "ipython",
    # "ipython-genutils",
    # "ipywidgets",
    # "jupyterlab-henanigans>=0.2.2",
    # "jupyterlab-sublime",
    # "jupyterlab-git",
    # "jupyterlab>=3.0.0",
    # "mypy",
    # "nbconvert",
    # "nbformat",
    # "notebook",
    # "pytest",
    # "pytest-cov",
    # "pytest-forked",
    # "pytest-xdist",
    # "rolling-pin>=0.4.2",
    # "sphinx-rtd-theme",
    # "sphinx>=5.3.0",
    # "tox",
]
