[project]
name = "lunchbox"
version = "0.3.0"
description = "A library of various tools for common python tasks"
authors = [
    {name = "Alex Braun", email = "alexander.g.braun@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "humanfriendly",
    "wrapt",
]

[project.scripts]
lunchbox = "lunchbox.command:main"

[project.optional-dependencies]

[tool.pdm.dev-dependencies]
lab = [
    "cufflinks",
    "jupyterlab-git",
    "jupyterlab-henanigans>=0.2.2",
    "jupyterlab-sublime",
    "jupyterlab>=3.5.0rc0",
    "rolling-pin>=0.7.0",
]
dev = [
    "pdm-bump",
    "pdm",
    "sphinx-rtd-theme",
    "sphinx>=5.3.0",
]
test = [
    "flake8",
    "mypy",
    "pytest-cov",
    "pytest-forked",
    "pytest-xdist",
    "pytest",
    "toml>=0.10.2",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "flaky:Flaky test",
]

[tool.pytest.ini_options.report]
show_missing = true
omit = [
    "*/__init__.py",
    "*/*_test_base.py",
    "*/*_test.py",
    "*/*_tests.py",
    "*/cli.py",
    "*/mock_*.py",
    "*/conftest.py",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_warn_no_return = true
pretty = true
warn_unused_ignores = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
