[project]
name = "lunchbox"
version = "0.3.0"
description = "A library of various tools for common python tasks"
authors = [
    {name = "Alex Braun", email = "alexander.g.braun@gmail.com"},
]
readme = "README.md"
license = "MIT"
keywords = ["tool", "tools", "general", "slack", "enforce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "humanfriendly",
    "wrapt",
]

[project.urls]
repository = "https://github.com/theNewFlesh/lunchbox"
documentation = "https://thenewflesh.github.io/lunchbox"

[project.scripts]
lunchbox = "lunchbox.command:main"

[project.optional-dependencies]

[tool.pdm.dev-dependencies]
lab = [
    "cufflinks",
    "jupyterlab-git",
    "jupyterlab-henanigans>=0.2.2",
    "jupyterlab-sublime",
    "jupyterlab>=3.5.0rc0",
    "rolling-pin>=0.7.0",
]
dev = [
    "pdm-bump",
    "pdm",
    "sphinx-rtd-theme",
    "sphinx>=5.3.0",
]
test = [
    "flake8",
    "mypy",
    "pytest-cov",
    "pytest-forked",
    "pytest-xdist",
    "pytest",
    "toml>=0.10.2",
    "tox>=3.27.0",
    "tox-pdm>=0.6.0",
]

[tool.pytest.ini_options]
cache_dir = "/home/ubuntu/.pytest_cache"
filterwarnings = [
    # "ignore::UserWarning",
    # "ignore::DeprecationWarning",
    # "ignore::PendingDeprecationWarning",
]
markers = [
    "flaky:Flaky test",
]

[tool.coverage.report]
show_missing = true
omit = [
    "*/__init__.py",
    "*/*_test_base.py",
    "*/*_test.py",
    "*/*_tests.py",
    "*/cli.py",
    "*/command.py",
    "*/mock_*.py",
    "*/conftest.py",
]

[tool.mypy]
cache_dir = "/home/ubuntu/.mypy_cache"
python_version = "3.10"
ignore_missing_imports = true
warn_no_return = false
pretty = true
warn_unused_ignores = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{10,9,8,7}
distdir = /home/ubuntu/build/dist
setupdir = /home/ubuntu/build/repo
toxworkdir = /home/ubuntu/build/tox
isolated_build = True

[testenv]
setenv =
    PYTHONPATH = ''
groups = test
commands = pytest -c pyproject.toml --numprocesses auto lunchbox
"""

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
