[project]
name = "lunchbox<dev>"
version = "0.3.0"
description = "A library of various tools for common python tasks"
authors = [
    {name = "Alex Braun", email = "alexander.g.braun@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "humanfriendly",
    "wrapt",
]

[project.scripts]
lunchbox = "lunchbox.command:main"

[tool.pdm.dev-dependencies]
lab = [
    "cufflinks",
    "jupyterlab-git",
    "jupyterlab-henanigans>=0.2.2",
    "jupyterlab-sublime",
    "jupyterlab>=3.5.0rc0",
    "rolling-pin>=0.7.0",
]
dev = [
    "flake8",
    "mypy",
    "pdm",
    "sphinx-rtd-theme",
    "sphinx>=5.3.0",
    "toml>=0.10.2",
]
test = [
    "pytest-cov",
    "pytest-forked",
    "pytest-xdist",
    "pytest",
    "tox-pdm>=0.6.0",
    "tox>=3.26.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
