[project]
name = "lunchbox"
version = "0.2.6"
description = "A library of various tools for common python tasks"
authors = [
    {name = "Alex Braun", email = "alexander.g.braun@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "humanfriendly",
    "wrapt",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
